# rustedex-dev

./: .gitignore  Cargo.toml  README.md
assets/css/: rustedex.css
scripts/: splitter.rhai
src/: args.rs  context.rs  find_by_lang.rs  handlebars.rs  main.rs  utils.rs
src/builders/: all_pokemon.rs  card.rs  descriptions.rs  locations.rs  mod.rs  moves.rs  pokemon.rs  search.rs  weaknesses.rs
src/generators/: all_pokemon.rs  home.rs  mod.rs  pokemon.rs  search.rs
templates/: all_pokemon.hbs  base.hbs  home.hbs  pokemon.hbs  rustedex.hbs  search.hbs
templates/partials/: all_pokemon.hbs  card.hbs  category.hbs  descriptions.hbs  locations.hbs  moves.hbs  type.hbs  types.hbs  weaknesses.hbs
