[package]
name = "rustedex"
description = "A static Pokedex generator"
readme = "README.md"
repository = "https://github.com/mlemesle/rustedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.10", features = ["derive"] }
handlebars = { version = "4.3.5", features = ["dir_source"] }
rustemon = "2.1.0"
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["fs", "macros", "rt-multi-thread"] }
warp = "0.3.3"