[package]
name = "rustedex"
description = "A static Pokedex generator"
readme = "README.md"
repository = "https://github.com/mlemesle/rustedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
clap = { version = "4.0.10", features = ["derive"] }
handlebars = { version = "4.3.5", features = ["dir_source"] }
include_dir = "0.7.2"
indicatif = "0.17.1"
num-format = "0.4.3"
rustemon = "2.1.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["fs", "macros", "rt-multi-thread"] }
warp = "0.3.3"
